--- a/index.html
+++ b/index.html
@@ -55,39 +55,40 @@
       <h1 class="3 spacer025em">ULTIMATE QUALITY!</h1>
       <div class="adenna">
         <div class="adennaDetails blue">
-          <h6 class="largeFont215em spacerbot0">ADENNA MIRACLE - BLUE NITRILE GLOVE</h6>
+          <h6 class="largeFont2em spacer0">ADENNA MIRACLE - BLUE NITRILE GLOVE</h6>
             <div class="adenna-grid">
-              <div class="adennaItem1 largeFont2em">
+                <div class="adennaItem1 largeFont2em">
               <h6 class="spacer0">GREAT PRICE only <span class="red">$5.75</span> per 100 gloves</h6>
               <h6 class="spacer0">$11.50 per box 200 gloves</h6>
               <h6 class="spacer0">10 boxes per case - 2000 gloves</h6>
             </div>
                 <div class="CliniciansReport black">
-                  <h4>Clinicians Report</h4>
-                  <h4>CR BUYING GUIDE</h4>
-                  <h4 class="blue underline">MIRACLE - BEST PRODUCT</h4>
+                  <h5>Clinicians Report</h5>
+                  <h5>CR BUYING GUIDE</h5>
+                  <h5 class="blue underline">MIRACLE - BEST PRODUCT</h5>
                 </div>
             </div>
           </div>
-          <h1 class="spacer5 red 2">After reward price $5.25 per 100 gloves</h1>
+          <h1 class="spacer025em red ">After reward price $5.25 per 100 gloves</h1>
         </div>
           <div class="StarMedPlus purple">
-          <h1 class="3 spacerbot0">STAR MED PLUS - ROYAL PURPLE NITRILE</h1>
-          <h1 class="2 spacer10">GREAT PRICE only <span class="red">$5.65</span> per 100 gloves</h1>
-          <h1 class="2 spacer10">$16.95 per box - 300 gloves</h1>
-          <h1 class="2 spacer10">10 boxes per case  $169.50 per case - 3000 gloves</h1>
-          <h1 class="red 2 spacertop0">After reward price $5.15 per 100 gloves</h1>
+          <h1 class="spacerbot0 largeFont2em">STAR MED PLUS - ROYAL PURPLE NITRILE</h1>
+            <div class="">
+              <h2 class="spacer0">GREAT PRICE only <span class="red">$5.65</span> per 100 gloves</h2>
+              <h2 class="spacer0">$16.95 per box - 300 gloves</h2>
+              <h2 class="spacer0">10 boxes per case  $169.50 per case - 3000 gloves</h2>
+            </div>
+          <h1 class="red largeFont2em spacer025em">After reward price $5.15 per 100 gloves</h1>
         </div>
-        <h1 class="4 stretch1 spacertop0">FREE GLOVES ALL YEAR!</h1>
-        <h1 class="spacer10">Just buy 7 cases, over any period of time and choose your reward!</h1>
-        <h1 class="spacer10">1000 free gloves or $50.00 gift card</h1>
-        <h1 class="spacer10">to the establisment of your choice!</h3>
-        <h1 class=" spacer10 spacerbot40">Mixed sizes or brands acceptable to form a full case</h1>
+        <h1 class="largeFont3em spacer0 ">FREE GLOVES ALL YEAR!</h1>
+        <h3 class="spacer0">Just buy 7 cases, over any period of time and choose your reward!</h3>
+        <h3 class="spacer0">1000 free gloves or $50.00 gift card to the establisment of your choice!</h3>
+        <h3 class=" spacer0 spacerbot40">Mixed sizes or brands acceptable to form a full case</h3>
         <div class="grid-containerContact">
-          <div class="contactBlock">
-            <h2>CALL TODAY OR EMAIL </h2>
-            <h2>PROTECT GLOVE </h2>
-            <h2>1-800-344-2851 - PROGLOVE@MSN.COM</h2>
+          <div class="contactBlock spacertop31">
+            <h4 class="spacer005em largeFont15em">CALL TODAY OR EMAIL </h4>
+            <h4 class="spacer005em largeFont15em">PROTECT GLOVE </h4>
+            <h4 class="spacer005em largeFont15em">1-800-344-2851 - PROGLOVE@MSN.COM</h4>
           </div>
           <div class="savings blue">
             <h2 class=""><span class="underline">SAVE</span> <br>50 to 70 cents <br>EVERYONE 100 GLOVES YOU BUY!</h2>
@@ -131,7 +132,7 @@
         <div class="calltodayBlock">
           <h2 class="spacer5"><span class="underline">CALL TODAY or EMAIL</span> <br>PROTECT GLOVE</h2>
           <h2 class="spacer5">1-800-344-2851</h2>
-          <h2 class="spacer5">proglove@msn.com</h3>
+          <h2 class="spacer5">proglove@msn.com</h2>
         </div>
         <div class="freeGloves navyBlue">
           <h1 class="spacer0">FREE GLOVES - REWARDS</h1>
