pages in place before changing grid size.

--- a/index.html
+++ b/index.html
@@ -85,20 +85,20 @@
         <h3 class="spacer0">1000 free gloves or $50.00 gift card to the establisment of your choice!</h3>
         <h3 class=" spacer0 spacerbot40">Mixed sizes or brands acceptable to form a full case</h3>
         <div class="grid-containerContact">
-          <div class="contactBlock spacertop31">
+          <div class="contactBlock spacertop25">
             <h4 class="spacer005em largeFont15em">CALL TODAY OR EMAIL </h4>
             <h4 class="spacer005em largeFont15em">PROTECT GLOVE </h4>
             <h4 class="spacer005em largeFont15em">1-800-344-2851 - PROGLOVE@MSN.COM</h4>
           </div>
           <div class="savings blue">
-            <h2 class=""><span class="underline">SAVE</span> <br>50 to 70 cents <br>EVERYONE 100 GLOVES YOU BUY!</h2>
+            <h3 class="largeFont125em"><span class="underline">SAVE</span> <br>50 to 70 cents <br>EVERYONE 100 GLOVES YOU BUY!</h3>
           </div>
         </div>
       </div>
     </div>
     <div id="page4" class="acme pageBorder">
-      <h3 class="3 spacer5 red">ATTRACTIVE COLORS PLUS HEALTHY HANDS <br>FOREVER!</h3>
-      <h3 class="3 spacertop0">AWARD WINNING NITRILE GLOVES WITH MOISTUIRIZERS!</h3>
+      <h1 class="red spacerbot0 ">ATTRACTIVE COLORS PLUS HEALTHY HANDS <br>FOREVER!</h1>
+      <h2 class="spacer005em">AWARD WINNING NITRILE GLOVES WITH MOISTUIRIZERS!</h2>
       <div class="grid-containerBoxes 1 spacerbot40">
         <div class="ocean box">
           <h2>"OCEAN"</h2>
