--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
   </head>
   <body>
     <div id="page1" class="pageBorder">
-      <div id="jumpStart" class="rotate20 largeFont175em jumpstart">
+      <div id="jumpStart" class="rotate20 jumpstart">
             <h1 class="spacer0">JUMP START</h1>
-            <h1 class="spacer0 marginleft2em">SAVING $$</h1>
+            <h1 class="spacer005em marginleft1em">SAVING $$</h1>
       </div>
-      <p id="banner" class=" largeFont4em spacer005em">PROTECT GLOVE. INC.</p>
+      <p id="banner" class=" largeFont3em  titleSPacer">PROTECT GLOVE. INC.</p>
       <div class="spacer10">
-        <h1 class="blue largeFont3em spacer005em">AWARD WINNING HAND CARE</h1>
-        <h2 class="spacer10 largeFont15em spacer025em ">DENTAL EXAMINATION GLOVES</h2>
+        <h1 class="blue largeFont175em spacer005em">AWARD WINNING HAND CARE</h1>
+        <h2 class="spacer10 spacer025em ">DENTAL EXAMINATION GLOVES</h2>
       </div>
-      <h2 class="spacer40 largeFont3em spacer025em red">ONE FULL YEAR $$$ EXTREME <br>SAVINGS!</h2>
+      <h2 class="spacer40 largeFont2em spacer025em red">ONE FULL YEAR $$$ EXTREME <br>SAVINGS!</h2>
       <h2 class="spacer40 largeFont15em spacer005em 2">DOUBLE REWARDS!!!</h2>
       <h1 class="spacer40 orange largeFont3em spacer025em navyBlue"> 2000<span class="underline"> FREE</span> Award winning Gloves and Rewards!!!</h1>
       <h2 class="spacer025em largeFont175em">REWARDS!</h2>
@@ -28,16 +28,16 @@
           <h2 class="spacer005em">email - proglove@msn.com</h2>
           <h2 class="spacer005em paddingRight1">  To place an order, or request free samples!</h2>
       </div>
-        <h2 class="largeFont15em spacer025em">Review the 6 pages on this flyer, and print them for your files!</h2>
+        <h2 class="largeFont15em spacer025em ">Review the 6 pages on this flyer, and print them for your files!</h2>
     </div>
     <div id="page2" class="pageBorder">
-      <h1 class="largeFont2em red">ATTRACTIVE - FUN - COOL COLORS!</h2>
-      <h2 class="spacer10 text34px y50percent"><span class="blue">BLUE</span>, <span class="hotPinkText">HOT PINK</span>, <span class="coralText">CORAL</span>, <span class="darkBlue">DARK BLUE</span>, <span class="purple">PURPLE</span> NITRILE</h2>
-      <h2 class="spacer10 2">GREAT PRICE - BEST QUALITY - BEST REWARDS!</h2>
-      <p class="largeFont15em  ">FREE GLOVES - <span class="underline">REWARDS</span> <br><span class="underline">SAVE</span><br>50 TO 70 CENTS<br>EVERY 100 GLOVES</p>
-      <h1 class="darkBlue largeFont3em stretch2 spacer20">FREQUENT BUYER REWARDS!</h1>
-      <h3 class="largeFont15em spacerbot0">Just buy 7 cases, over any period of time and choose your reward!</h3>
-      <h3 class=" largeFont15em spacer05em">1000 FREE GLOVES or $50.00 gift card to a retail establisment of your choice!</h3>
+      <h1 class="largeFont2em red spacerbot0">ATTRACTIVE - FUN - COOL COLORS!</h2>
+      <h2 class="spacer005em text28px y50percent"><span class="blue">BLUE</span>, <span class="hotPinkText">HOT PINK</span>, <span class="coralText">CORAL</span>, <span class="darkBlue">DARK BLUE</span>, <span class="purple">PURPLE</span> NITRILE</h2>
+      <h2 class="spacer025em 2">GREAT PRICE - BEST QUALITY - BEST REWARDS!</h2>
+      <p class="largeFont125em spacer005em ">FREE GLOVES - <span class="underline">REWARDS</span> <br><span class="underline">SAVE</span><br>50 TO 70 CENTS<br>EVERY 100 GLOVES</p>
+      <h1 class="darkBlue largeFont3em stretch2 spacer005em">FREQUENT BUYER REWARDS!</h1>
+      <h3 class="largeFont125em spacer005em">Just buy 7 cases, over any period of time and choose your reward!</h3>
+      <h3 class=" largeFont125em spacer05em">1000 FREE GLOVES or $50.00 gift card to a retail establisment of your choice!</h3>
       <h3 class="spacer20 largeFont15em stretch2 italics">CALL or email for a<br> FREE sample today!</h3>
       <h3 class="largeFont12em">Give us your name, Doctor's name/clinic name, complete address, <br>phone number, and a list of of sizes your office uses. EASY!</h3>
       <div class="flex-container1">
@@ -99,30 +99,32 @@
     <div id="page4" class="acme pageBorder">
       <h1 class="red spacerbot0 ">ATTRACTIVE COLORS PLUS HEALTHY HANDS <br>FOREVER!</h1>
       <h2 class="spacer005em">AWARD WINNING NITRILE GLOVES WITH MOISTUIRIZERS!</h2>
-      <div class="grid-containerBoxes 1 spacerbot40">
-        <div class="ocean box">
-          <h2>"OCEAN"</h2>
-          <h2>Cool Aqua Blue</h2>
-          <h2>#1 Nitrile</h2>
-          <h2>New York Dental Show</h2>
-        </div>
-        <div class="coral box">
-          <h2>"CORAL"</h2>
-          <h2>FRESH, light citrus scent</h2>
-          <h2>#1 Nitrile</h2>
-          <h2>Hawaii Dental Show</h2>
-        </div>
-        <div class="hotpink box">
-          <h2>"HOT PINK"</h2>
-          <h2>with ALLO-GEL</h2>
-          <h2>#1 Nitrile</h2>
-          <h2>Miami Beach Dental Show 2017</h2>
-        </div>
-        <div class="bluemax box">
-          <h2>"BLUE Max"</h2>
-          <h2>with ALLO-GEL</h2>
-          <h2>#1 Nitrile</h2>
-          <h2>Miami Beach Dental Show 2016</h2>
+      <div class="space">
+        <div class="grid-containerBoxes spacerbot40">
+          <div class="ocean box">
+            <h2>"OCEAN"</h2>
+            <h2>Cool Aqua Blue</h2>
+            <h2>#1 Nitrile</h2>
+            <h2>New York Dental Show</h2>
+          </div>
+          <div class="coral box">
+            <h2>"CORAL"</h2>
+            <h2>FRESH, light citrus scent</h2>
+            <h2>#1 Nitrile</h2>
+            <h2>Hawaii Dental Show</h2>
+          </div>
+          <div class="hotpink box">
+            <h2>"HOT PINK"</h2>
+            <h2>with ALLO-GEL</h2>
+            <h2>#1 Nitrile</h2>
+            <h2>Miami Beach Dental Show 2017</h2>
+          </div>
+          <div class="bluemax box">
+            <h2>"BLUE Max"</h2>
+            <h2>with ALLO-GEL</h2>
+            <h2>#1 Nitrile</h2>
+            <h2>Miami Beach Dental Show 2016</h2>
+          </div>
         </div>
       </div>
       <h2 class="1 spacer0">SUPER stretchy - 2nd skin feel - comfortable fit!</h2>
