update master branch

--- a/index.html
+++ b/index.html
@@ -7,9 +7,17 @@
   </head>
   <body>
     <div id="page1" class="pageBorder">
-      <p id="banner" class="largeFont5">PROTECT GLOVE. INC.</p>
+      <div id="jumpStart" class="rotate20  largeFont2 spacertop25">
+          <div class="jumpContainer">
+            <h1 class="spacer0 jumpPadding">JUMP START</h1>
+          </div>
+          <div class="savingsContainer">
+            <h1 class="spacer0 savingsPadding">SAVING $$</h1>
+        </div>
+      </div>
+      <p id="banner" class="largeFont5 spacertop25">PROTECT GLOVE. INC.</p>
       <div class="spacer10">
-        <h1 class="green spacer5 largeFont4">AWARD WINNING HAND CARE</h1>
+        <h1 class="blue spacer5 largeFont4">AWARD WINNING HAND CARE</h1>
         <h2 class="spacer10 largeFont2">DENTAL EXAMINATION GLOVES</h2>
       </div>
       <h2 class="spacer40 largeFont4 red">ONE FULL YEAR $$$ EXTREME <br>SAVINGS!</h2>
@@ -27,8 +35,8 @@
         <h2 class="largeFont3">Review the 6 pages on this flyer, and print them for your files!</h2>
     </div>
     <div id="page2" class="pageBorder">
-      <h2 class="spacer40 largeFont4 darkBlue">ATTRACTIVE - FUN - COOL COLORS!</h2>
-      <h2 class="spacer10 largeFont2">PLUS PREMIUM - BLUE/PURPLE NITRILE - GREAT PRICE!</h2>
+      <h2 class="spacer40 largeFont4 red">ATTRACTIVE - FUN - COOL COLORS!</h2>
+      <h2 class="spacer10 largeFont3"><span class="blue">BLUE</span>, <span class="hotPinkText">HOT PINK</span>, <span class="coralText">CORAL</span>, <span class="darkBlue">DARK BLUE</span>, <span class="purple">PURPLE</span> NITRILE</h2>
       <h2 class="spacer10 largeFont2">GREAT PRICE - BEST QUALITY - BEST REWARDS!</h2>
       <p class="largeFont1">FREE GLOVES - <span class="underline">REWARDS</span> <br><span class="underline">SAVE</span><br>50 TO 70 CENTS<br>EVERY 100 GLOVES</p>
       <h1 class="darkBlue largeFont4 stretch2 spacer20">FREQUENT BUYER REWARDS!</h1>
@@ -54,7 +62,7 @@
           <h1 class="largeFont3 spacerbot0">ADENNA MIRACLE - BLUE NITRILE GLOVE</h1>
             <div class="adenna-grid">
               <div class="adennaItem1">
-              <h1 class="spacer10 largeFont2">Only $5.75 per 100 gloves</h1>
+              <h1 class="spacer10 largeFont2">GREAT PRICE only <span class="red">$5.75</span> per 100 gloves</h1>
               <h1 class="spacer10 largeFont2">$11.50 per box 200 gloves</h1>
               <h1 class="spacertop0 largeFont2">10 boxes per case - 2000 gloves</h1>
             </div>
@@ -69,7 +77,7 @@
         </div>
           <div class="StarMedPlus purple">
           <h1 class="largeFont3 spacerbot0">STAR MED PLUS - ROYAL PURPLE NITRILE</h1>
-          <h1 class="largeFont2 spacer10">GREAT PRICE only $5.65 per 100 gloves</h1>
+          <h1 class="largeFont2 spacer10">GREAT PRICE only <span class="red">$5.65</span> per 100 gloves</h1>
           <h1 class="largeFont2 spacer10">$16.95 per box - 300 gloves</h1>
           <h1 class="largeFont2 spacer10">10 boxes per case  $169.50 per case - 3000 gloves</h1>
           <h1 class="red largeFont2 spacertop0">After reward price $5.15 per 100 gloves</h1>
@@ -173,7 +181,7 @@
           <h1><span class=" largeFont2 highlightYellow">$5.99 - 100 Gloves<span></h1>
         </div>
         <div id="pg5150gloves">
-          <h1><span class="largeFont2 highlightYellow">$8.985 - 150 Gloves<span></h1>
+          <h1><span class="largeFont2 highlightYellow">$8.98 - 150 Gloves<span></h1>
         </div>
       </div>
       <h1>Mix-sizes and colors to form a full case</h1>
@@ -199,7 +207,7 @@
       <h1 class="largeFont5 bold itallics spacer10">PLUS</h1>
       <h1 class="largeFont4 spacer0 italics">Thousands of <span class=" green">Free Award Winning Gloves</span> </h1>
       <h1 class="largeFont5 italics underline stretch1 red spacertop0">Forever!</h1>
-      <h1 class="largeFont3 navyBlue spacer5">E-mail - Brand - Glove Name - Price!</h1>
+      <h1 class="largeFont3 navyBlue spacer5">E-mail - Brand - Glove Name</h1>
       <h3 class="largeFont3 spacer5">Give us your name, Doctor's name/clinic name, complete address, <br>phone number, and a list of of sizes your office uses. EASY!</h3>
       <div class=" paddingLeft20 flex-container1">
         <div class="orderNow">
