--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
     </div>
     <div id="page3" class="pageBorder">
       <p class="text60px spacertop25 spacerbot0 italics">LOWEST PRICE * BEST REWARDS!</p>
-      <h1 class="3 spacer025em">ULTIMATE QUALITY!</h1>
+      <h1 class="largeFont15em spacer025em">ULTIMATE QUALITY!</h1>
       <div class="adenna">
         <div class="adennaDetails blue">
-          <h6 class="largeFont2em spacer0">ADENNA MIRACLE - BLUE NITRILE GLOVE</h6>
+          <h6 class="largeFont175em spacer0">ADENNA MIRACLE - BLUE NITRILE GLOVE</h6>
             <div class="adenna-grid">
                 <div class="adennaItem1 largeFont2em">
               <h6 class="spacer0">GREAT PRICE only <span class="red">$5.75</span> per 100 gloves</h6>
@@ -69,14 +69,14 @@
                 </div>
             </div>
           </div>
-          <h1 class="spacer025em red ">After reward price $5.25 per 100 gloves</h1>
+          <h1 class="spacer005em largeFont175em red ">After reward price $5.25 per 100 gloves</h1>
         </div>
           <div class="StarMedPlus purple">
-          <h1 class="spacerbot0 largeFont2em">STAR MED PLUS - ROYAL PURPLE NITRILE</h1>
-            <div class="">
-              <h2 class="spacer0">GREAT PRICE only <span class="red">$5.65</span> per 100 gloves</h2>
-              <h2 class="spacer0">$16.95 per box - 300 gloves</h2>
-              <h2 class="spacer0">10 boxes per case  $169.50 per case - 3000 gloves</h2>
+          <h1 class="spacer0 largeFont175em">STAR MED PLUS - ROYAL PURPLE NITRILE</h1>
+            <div class="largeFont125em">
+              <h3 class="spacer0">GREAT PRICE only <span class="red">$5.65</span> per 100 gloves</h3>
+              <h3 class="spacer0">$16.95 per box - 300 gloves</h3>
+              <h3 class="spacer0">10 boxes per case  $169.50 per case - 3000 gloves</h3>
             </div>
           <h1 class="red largeFont2em spacer025em">After reward price $5.15 per 100 gloves</h1>
         </div>
@@ -86,12 +86,12 @@
         <h3 class=" spacer0 spacerbot40">Mixed sizes or brands acceptable to form a full case</h3>
         <div class="grid-containerContact">
           <div class="contactBlock spacertop25">
-            <h4 class="spacer005em largeFont15em">CALL TODAY OR EMAIL </h4>
-            <h4 class="spacer005em largeFont15em">PROTECT GLOVE </h4>
-            <h4 class="spacer005em largeFont15em">1-800-344-2851 - PROGLOVE@MSN.COM</h4>
+            <h4 class="spacer005em">CALL TODAY OR EMAIL </h4>
+            <h4 class="spacer005em">PROTECT GLOVE </h4>
+            <h4 class="spacer005em">1-800-344-2851 - PROGLOVE@MSN.COM</h4>
           </div>
           <div class="savings blue">
-            <h3 class="largeFont125em"><span class="underline">SAVE</span> <br>50 to 70 cents <br>EVERYONE 100 GLOVES YOU BUY!</h3>
+            <h3 class=""><span class="underline">SAVE</span> <br>50 to 70 cents <br>EVERYONE 100 GLOVES YOU BUY!</h3>
           </div>
         </div>
       </div>
