--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
         <h3 class=" spacer0 spacerbot40">Mixed sizes or brands acceptable to form a full case</h3>
         <div class="grid-containerContact">
           <div class="contactBlock spacertop25">
-            <h4 class="spacer005em">CALL TODAY OR EMAIL </h4>
-            <h4 class="spacer005em">PROTECT GLOVE </h4>
-            <h4 class="spacer005em">1-800-344-2851 - PROGLOVE@MSN.COM</h4>
+            <h3 class="spacer005em">CALL TODAY OR EMAIL </h3>
+            <h3 class="spacer005em">PROTECT GLOVE </h3>
+            <h3 class="spacer005em">1-800-344-2851 - PROGLOVE@MSN.COM</h3>
           </div>
           <div class="savings blue">
             <h3 class=""><span class="underline">SAVE</span> <br>50 to 70 cents <br>EVERYONE 100 GLOVES YOU BUY!</h3>
@@ -97,53 +97,51 @@
       </div>
     </div>
     <div id="page4" class="acme pageBorder">
-      <h1 class="red spacerbot0 ">ATTRACTIVE COLORS PLUS HEALTHY HANDS <br>FOREVER!</h1>
-      <h2 class="spacer005em">AWARD WINNING NITRILE GLOVES WITH MOISTUIRIZERS!</h2>
-      <div class="space">
-        <div class="grid-containerBoxes spacerbot40">
+      <h2 class="red spacerbot0 ">ATTRACTIVE COLORS PLUS HEALTHY HANDS <br>FOREVER!</h2>
+      <h3 class="spacer005em">AWARD WINNING NITRILE GLOVES WITH MOISTUIRIZERS!</h3>
+      <div class="grid-containerBoxes">
           <div class="ocean box">
-            <h2>"OCEAN"</h2>
-            <h2>Cool Aqua Blue</h2>
-            <h2>#1 Nitrile</h2>
-            <h2>New York Dental Show</h2>
+            <h3>"OCEAN"</h3>
+            <h3>Cool Aqua Blue</h3>
+            <h3>#1 Nitrile</h3>
+            <h3>New York Dental Show</h3>
           </div>
           <div class="coral box">
-            <h2>"CORAL"</h2>
-            <h2>FRESH, light citrus scent</h2>
-            <h2>#1 Nitrile</h2>
-            <h2>Hawaii Dental Show</h2>
+            <h3>"CORAL"</h3>
+            <h3>FRESH, light citrus scent</h3>
+            <h3>#1 Nitrile</h3>
+            <h3>Hawaii Dental Show</h3>
           </div>
           <div class="hotpink box">
-            <h2>"HOT PINK"</h2>
-            <h2>with ALLO-GEL</h2>
-            <h2>#1 Nitrile</h2>
-            <h2>Miami Beach Dental Show 2017</h2>
+            <h3>"HOT PINK"</h3>
+            <h3>with ALLO-GEL</h3>
+            <h3>#1 Nitrile</h3>
+            <h3>Miami Beach Dental Show 2017</h3>
           </div>
           <div class="bluemax box">
-            <h2>"BLUE Max"</h2>
-            <h2>with ALLO-GEL</h2>
-            <h2>#1 Nitrile</h2>
-            <h2>Miami Beach Dental Show 2016</h2>
+            <h3>"BLUE Max"</h3>
+            <h3>with ALLO-GEL</h3>
+            <h3>#1 Nitrile</h3>
+            <h3>Miami Beach Dental Show 2016</h3>
           </div>
         </div>
-      </div>
-      <h2 class="1 spacer0">SUPER stretchy - 2nd skin feel - comfortable fit!</h2>
-      <h2 class="1 spacer0">ONLY $6.49 per box of 100 gloves!</h2>
-      <h2 class="1 spacertop0 spacerbot40">20 boxes per case - mix sizes and brands to make a full case!</h2>
+      <h2 class="1 spacer025em">SUPER stretchy - 2nd skin feel - comfortable fit!</h2>
+      <h2 class="1 spacer025em">ONLY $6.49 per box of 100 gloves!</h2>
+      <h2 class="1 spacer005em">20 boxes per case - mix sizes and brands to make a full case!</h2>
       <div class="grid-containerContactFreeGloves">
-        <div class="calltodayBlock">
-          <h2 class="spacer5"><span class="underline">CALL TODAY or EMAIL</span> <br>PROTECT GLOVE</h2>
-          <h2 class="spacer5">1-800-344-2851</h2>
-          <h2 class="spacer5">proglove@msn.com</h2>
+        <div class="calltodayBlock paddingLeft200">
+          <h4 class="spacer0"><span class="underline">CALL TODAY or EMAIL</span> <br>PROTECT GLOVE</h4>
+          <h4 class="spacer0">1-800-344-2851</h4>
+          <h4 class="spacer0">proglove@msn.com</h4>
         </div>
-        <div class="freeGloves navyBlue">
-          <h1 class="spacer0">FREE GLOVES - REWARDS</h1>
-          <h1 class="spacer0"><span class="underline">SAVE</span><br>50 TO 70 CENTS <br>EVERYONE 100 GLOVES YOU BUY!</h1>
+        <div class="freeGloves navyBlue paddingRight140">
+          <h4 class="spacer0">FREE GLOVES - REWARDS</h4>
+          <h4 class="spacer0"><span class="underline">SAVE</span><br>50 TO 70 CENTS <br>EVERYONE 100 GLOVES YOU BUY!</h4>
         </div>
       </div>
-      <h2 class="2 stretch2 spacer10">FREQUENT BUYER REWARDS - ALL YEAR LONG!</h2>
-      <h1 class="spacer5">Just buy 7 cases, over any period of time and choose your reward!</h1>
-      <h1 class="spacer5">1000 FREE GLOVES or $50.00 gift card to a retail establishment of your choice!!</h1>
+      <h2 class="2 spacer025em">FREQUENT BUYER REWARDS - ALL YEAR LONG!</h2>
+      <h2 class="spacer025em">Just buy 7 cases, over any period of time and choose your reward!</h2>
+      <h2 class="spacer025em">1000 FREE GLOVES or $50.00 gift card to a retail establishment of your choice!!</h2>
     </div>
     <div id="page5" class="pageBorder">
       <h1 class="spacer20 5 stretch3 spacerbot0">No more dry hands!</h1>
