--- a/index.html
+++ b/index.html
@@ -144,57 +144,57 @@
       <h2 class="spacer025em">1000 FREE GLOVES or $50.00 gift card to a retail establishment of your choice!!</h2>
     </div>
     <div id="page5" class="pageBorder">
-      <h1 class="spacer20 5 stretch3 spacerbot0">No more dry hands!</h1>
+      <h1 class="spacer20 5 x50percent  spacerbot0">No more dry hands!</h1>
       <div id="koolTouch">
-      <h1 class="marker spacer10 3">KOOLTOUCH-E</h1>
+      <h1 class="marker spacer005em 3">KOOLTOUCH-E</h1>
       </div>
-      <h2 class="spacer5 spacerbot20 2"><span class="highlightYellow">Bright white Nitrile with moisturizer</span></h2>
+      <h2 class="spacer005em spacerbot20 2"><span class="highlightYellow">Bright white Nitrile with moisturizer</span></h2>
       <div class="flex-containerThreebox">
         <div class="indivSpacer5" id="gloveRewardsp5">
-            <h2 class="spacer0">FREE GLOVES - REWARDS!</h2>
-            <h2 class="spacer0">SAVE</h2>
-            <h2 class="spacer0"> 50 to 70 CENTS</h2>
-            <h2 class="spacer0">EVERY 100 GLOVES YOU BUY!</h1>
+            <h4 class="spacer0">FREE GLOVES - REWARDS!</h4>
+            <h4 class="spacer0">SAVE</h4>
+            <h4 class="spacer0"> 50 to 70 CENTS</h4>
+            <h4 class="spacer0">EVERY 100 GLOVES YOU BUY!</h4>
         </div>
         <div class="indivSpacer5" id="chicagoDental">
-          <h2 class="spacer5">Chicago Dental Show</h2>
-          <h2 class="spacer5"><span class="highlightYellow">best non-latex</span></h2>
-          <h2 class="spacer5">nitrile glove</h2>
+          <h4 class="spacer5">Chicago Dental Show</h4>
+          <h4 class="spacer5"><span class="highlightYellow">best non-latex</span></h4>
+          <h4 class="spacer5">nitrile glove</h4>
         </div>
       </div>
-      <div class="20px">
-        <h1 class="spacer5">Super stretchy - 2nd skin feel - comfortable fit!</h1>
-        <h1 class="spacer5 stretch1"><span class="highlightYellow">Treat yourself to soft and healthy hands!</span></h1>
-        <h1 class="spacer10">The Nitrile KOOLTOUCH BLUE and KOOLTOUCHe white <br>packaged 150 gloves per box, 20 boxes per case.</h1>
-        <h1 class="spacer10 stretch1">Eco-Friendly, space saving packaging,</h1>
-        <h1 class="spacer10 stretch1">10 boxes takes up the space of 15 boxes,</h1>
-        <h1 class="spacer10 stretch1">Saves time in replenishing workstations,</h1>
-        <h1 class="spacer10 stretch1">Order less frequently!</h1>
+      <div class="">
+        <h3 class="spacer025em">Super stretchy - 2nd skin feel - comfortable fit!</h3>
+        <h3 class="spacer025em stretch3"><span class="highlightYellow">Treat yourself to soft and healthy hands!</span></h3>
+        <h3 class="spacer025em">The Nitrile KOOLTOUCH-E BLUE and KOOLTOUCH-E WHITE <br>packaged 150 gloves per box, 20 boxes per case.</h3>
+        <h3 class="spacer025em stretch3">Eco-Friendly, space saving packaging,</h3>
+        <h3 class="spacer025em stretch3">10 boxes takes up the space of 15 boxes,</h3>
+        <h3 class="spacer025em stretch3">Saves time in replenishing workstations,</h3>
+        <h3 class="spacer025em stretch3">Order less frequently!</h3>
       </div>
-      <h1 class="2 ">KOOLTOUCHe and KOOLTOUCH <span class="highlightBlue">BLUE</span></h1>
-      <h1 class="2 ">SPACE-SAVER PACKAGING!!</h1>
+      <h2 class="spacer025em ">KOOLTOUCHe and KOOLTOUCH <span class="highlightBlue">BLUE</span></h2>
+      <h2 class="spacer025em ">SPACE-SAVER PACKAGING!!</h2>
       <div class="pg5splitContainer1">
         <div id="pg5100gloves">
-          <h1><span class=" 2 highlightYellow">$5.99 - 100 Gloves<span></h1>
+          <h1 class="spacer025em"><span class=" 2 highlightYellow">$5.99 - 100 Gloves<span></h1>
         </div>
         <div id="pg5150gloves">
-          <h1><span class="2 highlightYellow">$8.985 - 150 Gloves<span></h1>
+          <h1 class="spacer025em"><span class="2 highlightYellow">$8.985 - 150 Gloves<span></h1>
         </div>
       </div>
-      <h1>Mix-sizes and colors to form a full case</h1>
-      <h1  class="red">20 boxes per case 3000 gloves $179.90</h1>
+      <h3 class=" spacer005em ">Mix-sizes and colors to form a full case</h3>
+      <h1  class=" spacer005em red">20 boxes per case 3000 gloves $179.90</h1>
       <div class="pg5splitContainer3">
         <div class="column1">
-          <h1>Order today!</h1>
+          <h2 class="spacer025em">Order today!</h2>
         </div>
-        <div class="pg5splitContainer4">
-          <p class="3 spacertop2">#1</p>
+        <div class="pg5splitContainer4 spacer025em">
+          <p class="largeFont2em spacer0">#1</p>
           <div>
-            <p class="20px paddingBot"><span class="highlightYellow">SELLING GLOVE<br>IN THE WORLD</span><br>100 MILLION PER MONTH!</p>
+            <p class="text20px spacer0"><span class="highlightYellow">SELLING GLOVE<br>IN THE WORLD</span><br>100 MILLION PER MONTH!</p>
           </div>
         </div>
       </div>
-      <h1>PROTECT GLOVE 1-800-344-2851 or 1-855-344-2851<br>PROGLOVE@MSN.COM</h1>
+      <h2 class="spacer005em largeFont15em">PROTECT GLOVE 1-800-344-2851 or 1-855-344-2851<br>PROGLOVE@MSN.COM</h2>
     </div>
     <div id="page6" class="pageBorder">
       <h1 class="5 itallics stretch1 spacerbot0 spacertop25 navyBlue">Cut Cost - Exam Dental Gloves$$$</h1>
