--- a/index_print.html
+++ b/index_print.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link href="css/styles2.css" rel="stylesheet" type="text/css">
+    <link href="css/printStles.css" rel="stylesheet" type="text/css">
     <title>Protect Glove. INC.</title>
   </head>
   <body>
@@ -18,7 +18,7 @@
       </div>
       <h2 class="spacer40 largeFont2em spacer025em red">ONE FULL YEAR $$$ EXTREME <br>SAVINGS!</h2>
       <h2 class="spacer40 largeFont15em spacer005em 2">DOUBLE REWARDS!!!</h2>
-      <h1 class="spacer40 orange largeFont3em spacer025em navyBlue"> 2000<span class="underline"> FREE</span> Award winning Gloves and Rewards!!!</h1>
+      <h1 class="spacer40 orange largeFont3em spacer025em navyBlue"> 2000<span class="underline"> FREE</span> Award winning Gloves every 7 cases you buy$</h1>
       <h2 class="spacer025em largeFont175em">REWARDS!</h2>
       <h2 class="spacer005em spacertop0">Every 7 cases, over any period of time you buy!</h2>
       <p class="spacer005em largeFont15em"><span class="highlightYellow">SAVE OVER $1.00 on EVERY 100 GLOVES</span></p>
@@ -40,7 +40,7 @@
       <h3 class=" largeFont125em spacer05em">1000 FREE GLOVES or $50.00 gift card to a retail establisment of your choice!</h3>
       <h3 class="spacer20 largeFont15em stretch2 italics">CALL or email for a<br> FREE sample today!</h3>
       <h3 class="largeFont12em">Give us your name, Doctor's name/clinic name, complete address, <br>phone number, and a list of of sizes your office uses. EASY!</h3>
-      <div class="flex-container1">
+      <div class="flex-container2">
         <div class="orderNow largeFont1">
           <h3 class="spacer05em y50percent">ORDER <br>NOW!</h3>
         </div>
@@ -198,9 +198,9 @@
     </div>
     <div id="page6" class="pageBorder">
       <h1 class="5 itallics stretch1 spacerbot0 spacertop25 navyBlue">Cut Cost - Exam Dental Gloves$$$</h1>
-      <h1 class="3 spacer0">The Following Brand $</h1>
-      <h1 class="6 spacer5 stretch1 ">Adenna</h1>
-      <h1 class="2 spacer10">We'll <span class="italics 3">Meet</span> or <span class="italics 3">Beat</span> Any Price $</h1>
+      <h1 class=" spacer0">The Following Brand $</h1>
+      <h1 class=" largeFont2em spacer025em ">Adenna</h1>
+      <h1 class=" spacer005em">We'll <span class="italics 3">Meet</span> or <span class="italics 3">Beat</span> Any Price $</h1>
       <h1 class="5 bold itallics spacer10">PLUS</h1>
       <h1 class="4 spacer0 italics">Thousands of <span class=" green">Free Award Winning Gloves</span> </h1>
       <h1 class="5 italics underline stretch1 red spacertop0">Forever!</h1>
@@ -208,14 +208,14 @@
       <h3 class="3 spacer5">Give us your name, Doctor's name/clinic name, complete address, <br>phone number, and a list of of sizes your office uses. EASY!</h3>
       <div class=" paddingLeft20 flex-container1">
         <div class="orderNow">
-          <h3 class=" 3 spacertop20">ORDER <br>NOW!</h3>
+          <h2 class=" 3 spacertop31">ORDER <br>NOW!</h2>
         </div>
         <div class="callToday 2">
-          <h4 class="spacer20">CALL TODAY or EMAIL PROTECT GLOVE</h4>
-          <h4  class="spacertop10 spacerbot0">1-800-344-2851 or email proglove@msn.com</h4>
+          <h2 class="spacer20">CALL TODAY or EMAIL PROTECT GLOVE</h2>
+            <h2  class="spacertop10 spacerbot0">1-800-344-2851 or email proglove@msn.com</h2>
         </div>
       </div>
-      <h1 class="italics 4 stretch1 spacer10 ">FREE FREIGHT - NO HANDLING FEES!</h1>
+      <h2 class="italics ">FREE FREIGHT - NO HANDLING FEES!</h2>
     </div>
   </body>
 </html>
