add every 7 cases to page one after 2000 free gloves.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </div>
       <h2 class="spacer40 largeFont4 red">ONE FULL YEAR $$$ EXTREME <br>SAVINGS!</h2>
       <h2 class="spacer40 largeFont2">DOUBLE REWARDS!!!</h2>
-      <h1 class="spacer40 orange largeFont5 navyBlue"> 2000<span class="underline"> FREE</span> Award winning Gloves and Rewards!!!</h1>
+      <h1 class="spacer40 orange largeFont4 navyBlue"> 2000<span class="underline"> FREE</span> Award winning Gloves every 7 cases you buy$</h1>
       <h2 class="spacer0 largeFont3">REWARDS!</h2>
       <h2 class="spacer5 largeFont1 spacertop0">Every 7 cases, over any period of time you buy!</h2>
       <p class="spacer5 largeFont1 "><span class="highlightYellow">SAVE OVER $1.00 on EVERY 100 GLOVES</span></p>
@@ -32,7 +32,7 @@
           <h2 class="spacer10">email - proglove@msn.com</h2>
           <h2 class="spacer10 paddingRight1">  To place an order, or request free samples!</h2>
       </div>
-        <h2 class="largeFont3">Review the 6 pages on this flyer, and print them for your files!</h2>
+        <h2 class="largeFont3">Review the 6 pages on this flyer, and <a href="index_print.html">click here</a> for a printer friendly version!</h2>
     </div>
     <div id="page2" class="pageBorder">
       <h2 class="spacer40 largeFont4 red">ATTRACTIVE - FUN - COOL COLORS!</h2>
