--- a/index_print.html
+++ b/index_print.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link href="css/printStles.css" rel="stylesheet" type="text/css">
+    <link href="css/printStyles.css" rel="stylesheet" type="text/css">
     <title>Protect Glove. INC.</title>
   </head>
   <body>
